src/platform/templates/applications/kasten/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasten
  namespace: platform-kasten
  labels:
    app.kubernetes.io/component: kasten
    app.kubernetes.io/instance: kasten
    app.kubernetes.io/name: kasten
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kasten.jeancloude.club
spec:
  rules:
    - host: kasten.jeancloude.club
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  name: http
